
<!--
  ~ JBoss, Home of Professional Open Source
  ~
  ~ Copyright 2014 Red Hat, Inc. and/or its affiliates.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>47</version>
    </parent>

    <groupId>org.jboss.xnio</groupId>
    <artifactId>xnio-all</artifactId>
    <packaging>pom</packaging>
    <name>XNIO Parent POM</name>
    <version>3.8.17.Final</version>
    <description>The aggregator POM of the XNIO project</description>
    <url>https://xnio.jboss.org</url>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>http://repository.jboss.org/licenses/apache-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>David Lloyd</name>
            <email>dmlloyd@redhat.com</email>
            <organization>WildFly</organization>
            <organizationUrl>https://www.wildfly.org/</organizationUrl>
        </developer>
        <developer>
            <name>Flavia Rainone</name>
            <email>frainone@redhat.com</email>
            <organization>WildFly</organization>
            <organizationUrl>https://www.wildfly.org/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:xnio/xnio.git</connection>
        <developerConnection>scm:git:git@github.com:xnio/xnio.git</developerConnection>
        <url>https://github.com/xnio/xnio</url>
    </scm>

    <modules>
        <module>api</module>
        <module>nio-impl</module>
    </modules>

    <properties>
        <!-- Repository Deployment Settings -->
        <nexus.repository.staging>jboss-io</nexus.repository.staging>
        <nexus.repository.release>releases</nexus.repository.release>
        <nexus.staging.tag>xnio-${project.version}</nexus.staging.tag>
        <nexus.serverId>jboss</nexus.serverId>
        <nexus.repository.url>https://repository.jboss.org/nexus/</nexus.repository.url>
        
        <!-- maven-gpg-plugin -->
        <gpg.pinEntryMode>loopback</gpg.pinEntryMode>
        <version.gpg.plugin>3.2.8</version.gpg.plugin>
        <version.nxrm3.plugin>1.0.7</version.nxrm3.plugin>

        <byteman-version>4.0.18</byteman-version>
        <version.org.jboss.logging.jboss-logging>3.4.3.Final</version.org.jboss.logging.jboss-logging>
        <version.org.jboss.logging.jboss-logging-tools>2.2.1.Final</version.org.jboss.logging.jboss-logging-tools>
        <version.org.jboss.logmanager.jboss-logmanager>2.1.18.Final</version.org.jboss.logmanager.jboss-logmanager>
        <version.org.jboss.threads>2.3.6.Final</version.org.jboss.threads>
        <version.org.wildfly.common>1.5.4.Final</version.org.wildfly.common>
        <version.org.wildfly.client-config>1.0.1.Final</version.org.wildfly.client-config>
        <version.bridger.plugin>1.6.Final</version.bridger.plugin>
        <version.junit>4.13.2</version.junit>
        <version.jmock>2.12.0</version.jmock>
        <org.xnio.ssl.new>false</org.xnio.ssl.new>
        <modular.jdk.props></modular.jdk.props>
        <version.org.osgi.core>6.0.0</version.org.osgi.core>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jboss.xnio</groupId>
                <artifactId>xnio-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.xnio</groupId>
                <artifactId>xnio-nio</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.xnio</groupId>
                <artifactId>compat-tool</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jboss.logging</groupId>
                <artifactId>jboss-logging</artifactId>
                <version>${version.org.jboss.logging.jboss-logging}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.logging</groupId>
                <artifactId>jboss-logging-processor</artifactId>
                <version>${version.org.jboss.logging.jboss-logging-tools}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.logging</groupId>
                <artifactId>jboss-logging-annotations</artifactId>
                <version>${version.org.jboss.logging.jboss-logging-tools}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.threads</groupId>
                <artifactId>jboss-threads</artifactId>
                <version>${version.org.jboss.threads}</version>
            </dependency>
            <dependency>
                <groupId>org.wildfly.common</groupId>
                <artifactId>wildfly-common</artifactId>
                <version>${version.org.wildfly.common}</version>
            </dependency>
            <dependency>
                <groupId>org.wildfly.client</groupId>
                <artifactId>wildfly-client-config</artifactId>
                <version>${version.org.wildfly.client-config}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.wildfly.common</groupId>
                        <artifactId>wildfly-common</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.osgi</groupId>
                <artifactId>org.osgi.core</artifactId>
                <version>${version.org.osgi.core}</version>
            </dependency>
            <dependency>
                <groupId>org.jmock</groupId>
                <artifactId>jmock</artifactId>
                <version>${version.jmock}</version>
            </dependency>
            <dependency>
                <groupId>org.jmock</groupId>
                <artifactId>jmock-junit4</artifactId>
                <version>${version.jmock}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.logmanager</groupId>
                <artifactId>jboss-logmanager</artifactId>
                <version>${version.org.jboss.logmanager.jboss-logmanager}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${version.junit}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.byteman</groupId>
                <artifactId>byteman</artifactId>
                <version>${byteman-version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.byteman</groupId>
                <artifactId>byteman-bmunit</artifactId>
                <version>${byteman-version}</version>
                <scope>test</scope>
                <exclusions>
                    <exclusion>
                        <artifactId>testng</artifactId>
                        <groupId>org.testng</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.jboss.byteman</groupId>
                <artifactId>byteman-install</artifactId>
                <version>${byteman-version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>${version.gpg.plugin}</version>
                    <configuration>
                        <useAgent>true</useAgent>
                        <gpgArguments>
                            <arg>--pinentry-mode</arg>
                            <arg>${gpg.pinEntryMode}</arg>
                        </gpgArguments>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonatype.plugins</groupId>
                    <artifactId>nxrm3-maven-plugin</artifactId>
                    <version>${version.nxrm3.plugin}</version>
                    <configuration>
                        <serverId>${nexus.serverId}</serverId>
                        <nexusUrl>${nexus.repository.url}</nexusUrl>
                    </configuration>
                    <executions>
                        <execution>
                            <id>nexus-move</id>
                            <configuration>
                                <repository>${nexus.repository.staging}</repository>
                                <destinationRepository>${nexus.repository.release}</destinationRepository>
                                <tag>${nexus.staging.tag}</tag>
                            </configuration>
                        </execution>
                        <execution>
                             <id>nexus-delete</id>
                             <configuration>
                                 <tag>${nexus.staging.tag}</tag>
                             </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>  
    </build>

    <profiles>
        <profile>
            <id>jboss-release</id>
                <build>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-deploy-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>default-deploy</id>
                                    <phase>none</phase>
                                </execution>
                            </executions>
                        </plugin>
                        <plugin>
                            <groupId>org.sonatype.plugins</groupId>
                            <artifactId>nxrm3-maven-plugin</artifactId>
                            <extensions>true</extensions>
                            <executions>
                                <execution>
                                    <id>nexus-deploy</id>
                                    <phase>deploy</phase>
                                    <goals>
                                        <goal>staging-deploy</goal>
                                    </goals>
                                    <configuration>
                                        <repository>${nexus.repository.staging}</repository>
                                        <tag>${nexus.staging.tag}</tag>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-gpg-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>gpg-sign</id>
                                    <goals>
                                        <goal>sign</goal>
                                    </goals>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </build>
        </profile>
        <profile>
            <id>jdk18</id>
            <activation>
                <jdk>[18,)</jdk>
            </activation>
            <properties>
                <modular.jdk.props>-Djava.security.manager=allow</modular.jdk.props>
            </properties>
        </profile>
    </profiles>

</project>
